--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"/>
     <title>Portfolio</title>
 </head>
-<body class="bg-primary">
+<body class="" id="projectbody">
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <a class="navbar-brand text-light" href="#">Matt's Portfolio</a>
@@ -41,22 +41,22 @@
       <!-- Main Content Start -->
 <div>
     <div class="text-center text-light">
-      <h2 class="col-md-6 offset-md-3 p-5">Here are some of the projects that I have completed using my newly acquired knowledge:</h2>
+      <h2 class="col-md-6 offset-md-3 p-5">Here are some of the projects that I have completed using the knowledge that I have acquired:</h2>
       <div class="bg-secondary mr-5 ml-5">
-        <div class="d-inline-block ml-3 mr-3 bg-dark text-light">
-            <img class="mt-3 mb-3 ml-3 mr-3" width="250" src="https://getbootstrap.com/docs/4.0/examples/screenshots/album.png">
-            <h3>My First Project</h3>
-            <p>A simple project made from HTML</p>
+        <div class="d-inline-block ml-3 mr-3 bg-dark text-light p-3">
+            <img class="mt-3 mb-3 ml-3 mr-3" width="250" src="Project1.jpg">
+            <h3>Project 1</h3>
+            <p>Made using CSS. Utilizes Box Model and Flexbox Layouting</p>
         </div>
-        <div class="d-inline-block ml-3 mr-3 bg-dark text-light mt-5 mb-5">
-            <img class="mt-3 mb-3 ml-3 mr-3" width="250" src="https://getbootstrap.com/docs/4.0/examples/screenshots/jumbotron.png">
-            <h3>My Second Project</h3>
-            <p>A simple project made from CSS</p>
+        <div class="d-inline-block ml-3 mr-3 bg-dark text-light mt-5 mb-5 p-3">
+            <img class="mt-3 mb-3 ml-3 mr-3" width="250" src="Project2.jpg">
+            <h3>Project 2</h3>
+            <p>Utilizes CSS Styling Properties and Positioning</p>
         </div>
-        <div class="d-inline-block ml-3 mr-3 bg-dark text-light">
-            <img class="mt-3 mb-3 ml-3 mr-3" width="250" src="https://getbootstrap.com/docs/4.0/examples/screenshots/carousel.png">
-            <h3>My Third Project</h3>
-            <p>A simple project made from Bootstrap</p>
+        <div class="d-inline-block ml-3 mr-3 bg-dark text-light p-3">
+            <img class="mt-3 mb-3 ml-3 mr-3" width="250" src="Project3.jpg">
+            <h3>Project 3</h3>
+            <p>Made from Bootstrap. Utilizes Boostrap Grid System</p>
         </div>
     </div>
 
