--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"/>
     <title>Portfolio</title>
 </head>
-<body class="bg-secondary">
+<body class="bg-secondary" id="contactbody">
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <a class="navbar-brand text-light" href="#">Matt's Portfolio</a>
@@ -38,7 +39,8 @@
       </nav>
       <!-- Navbar end -->
       <!-- Contact Form Start -->
-      <div div class="container-fluid bg-dark text-light vh-200 p-5">
+<div class="offset-md-3">
+      <div div class="container-fluid text-light vh-200 p-5 text-center">
         <h3 class="col-12 col-md-8 col-xl-4 offset-md-2">Contact Me</h3>
         <div class= "card bg-primary text-light row col-12 col-md-8 col-xl-4 offset-md-2">
             <form class="">
@@ -55,14 +57,6 @@
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Contact Number</label>
                     <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="+63 900 000 0000">
-                </div>
-                <div class="form-group">
-                        <label for="exampleFormControlSelect1">Concern</label>
-                        <select class="form-control" id="exampleFormControlSelect1">
-                          <option>Quotation</option>
-                          <option>Appointment</option>
-                          <option>Follow-Up</option>
-                        </select>
                 </div>
 
                 <div class="text-light">
@@ -95,6 +89,7 @@
 
         </div>
     </div>
+</div>
 
 
 
