--- a/landing.html
+++ b/landing.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"/>
     <title>Portfolio</title>
 </head>
-<body class="bg-secondary">
+<body class="bg-secondary" id="landingbody">
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <a class="navbar-brand text-light" href="#">Matt's Portfolio</a>
@@ -40,8 +40,8 @@
       <!-- Navbar end -->
 
       <!-- Main Content Start -->
-      <div class="card col-lg-12 p-0 text-center bg-secondary">
-        <div class="container-fluid bg-primary text-light min-vh-150 p-3 p-md-5">
+      <div class="card col-md-6 p-0 text-center bg-secondary offset-lg-3 max-vh-200">
+        <div class="container-fluid bg-muted text-light min-vh-150 p-3 p-md-5">
 
             <img class="mt-5 mt-md-0 rounded-circle" width="250" src="./self.jpg">
 
@@ -51,7 +51,7 @@
             <div class="row mt-5">
                 <div class="offset-md-2 col-md-8">
                     <p>
-                      Hello there! My Name is John Matthew Morante. I am an aspiring Software Developer. I hope to one day possess the all skills necessary to have a career that allows me create interesting applications and websites for a living.
+                      Hello there! My Name is John Matthew Morante. I am an aspiring Software Developer. I hope to one day possess all skills necessary to have a career that allows me create interesting applications and websites for a living.
                     </p>
 
                     
@@ -61,7 +61,7 @@
             </div>
 
             <div class="row d-md-block mt-md-5">
-                <div class="offset-lg-3 col-lg-6">
+                <div class="offset-lg-1 col-lg-10">
                     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
