--- a/tools.html
+++ b/tools.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"/>
     <title>Portfolio</title>
 </head>
-<body class="bg-secondary">
+<body class="bg-secondary" id="toolsbody">
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <a class="navbar-brand text-light" href="#">Matt's Portfolio</a>
@@ -37,20 +38,69 @@
         </div>
       </nav>
       <!-- Navbar end -->
+      <!-- Tools Start -->
+      <div class="text-center text-light p-3">
+        <h2>Here are the tools that I am able to use:</h2>
+        <div class="col-md-8 p-3 b-3 offset-md-2 border border-dark min">
+        <div class="progress border border-dark" style="height: 25px">
+            <div class="progress-bar bg-success border border-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">HTML</div>
+          </div>
+          <div class="progress progress border border-dark" style="height: 25px">
+            <div class="progress-bar bg-info border border-dark" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">CSS</div>
+          </div>
+          <div class="progress progress border border-dark" style="height: 25px">
+            <div class="progress-bar bg-warning border border-dark" role="progressbar" style="width: 20%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Bootstrap</div>
+          </div>
 
+          <div class="progress progress border border-dark" style="height: 25px">
+            <div class="progress-bar bg-primary border border-dark" role="progressbar" style="width: 10%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">JavaScript</div>
+          </div>
 
+          <div class="progress progress border border-dark" style="height: 25px">
+            <div class="progress-bar bg-danger border border-dark" role="progressbar" style="width: 5%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Node JS</div>
+          </div>
+        </div>
+        <table class="table table-bordered table-dark p-5 col-md-6 offset-md-3">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Tool</th>
+                <th scope="col">Color</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>HTML</td>
+                <td class="bg-success"></td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>CSS</td>
+                <td class="bg-info"></td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>Bootstrap</td>
+                <td class="bg-warning"></td>
+              </tr>
 
+              <tr>
+                <th scope="row">4</th>
+                <td>JavaScript</td>
+                <td class="bg-primary"></td>
+              </tr>
 
+              <tr>
+                <th scope="row">5</th>
+                <td>Node JS</td>
+                <td class="bg-danger"></td>
+              </tr>
 
+            </tbody>
+          </table>
 
-
-
-
-
-
-
-
-
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 </body>
