--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link text-light" href="./landing.html">Home<span class="sr-only">(current)</span></a>
+              <a class="nav-link text-light" href="./index.html">Home<span class="sr-only">(current)</span></a>
             </li>
 
             <li class="nav-item active">
