--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!-- Navbar end -->
 
       <!-- Main Content Start -->
-      <div class="card col-md-6 p-0 text-center bg-secondary offset-lg-3 max-vh-200">
+      <div class="card col-md-6 p-0 text-center bg-secondary offset-md-3 max-vh-200">
         <div class="container-fluid bg-muted text-light min-vh-150 p-3 p-md-5">
 
             <img class="mt-5 mt-md-0 rounded-circle" width="250" src="./self.jpg">
